v0.4/_sources/examples/ncss/NCSS_Example.rst.txt


.. _sphx_glr_examples_ncss_NCSS_Example.py:


==========
Basic NCSS
==========

Use Siphon to query the NetCDF Subset Service (NCSS).



.. code-block:: python

    from datetime import datetime

    import matplotlib.pyplot as plt

    from siphon.catalog import TDSCatalog
    from siphon.ncss import NCSS







First we construct a TDSCatalog instance pointing to our dataset of interest, in
this case TDS' "Best" virtual dataset for the GFS global 0.5 degree collection of
GRIB files. We see this catalog contains a single dataset.



.. code-block:: python

    best_gfs = TDSCatalog('http://thredds.ucar.edu/thredds/catalog/grib/NCEP/GFS/'
                          'Global_0p5deg/catalog.xml?dataset=grib/NCEP/GFS/Global_0p5deg/Best')
    print(best_gfs.datasets)





.. rst-class:: sphx-glr-script-out

 Out::

    OrderedDict([('Best GFS Half Degree Forecast Time Series', <siphon.catalog.Dataset object at 0x114ec56a0>)])


We pull out this dataset and look at the access urls.



.. code-block:: python

    best_ds = list(best_gfs.datasets.values())[0]
    print(best_ds.access_urls)





.. rst-class:: sphx-glr-script-out

 Out::

    {'OPENDAP': 'http://thredds.ucar.edu/thredds/dodsC/grib/NCEP/GFS/Global_0p5deg/Best', 'WCS': 'http://thredds.ucar.edu/thredds/wcs/grib/NCEP/GFS/Global_0p5deg/Best', 'WMS': 'http://thredds.ucar.edu/thredds/wms/grib/NCEP/GFS/Global_0p5deg/Best', 'NetcdfSubset': 'http://thredds.ucar.edu/thredds/ncss/grib/NCEP/GFS/Global_0p5deg/Best', 'CdmRemote': 'http://thredds.ucar.edu/thredds/cdmremote/grib/NCEP/GFS/Global_0p5deg/Best', 'NCML': 'http://thredds.ucar.edu/thredds/ncml/grib/NCEP/GFS/Global_0p5deg/Best', 'UDDC': 'http://thredds.ucar.edu/thredds/uddc/grib/NCEP/GFS/Global_0p5deg/Best', 'ISO': 'http://thredds.ucar.edu/thredds/iso/grib/NCEP/GFS/Global_0p5deg/Best'}


Note the `NetcdfSubset` entry, which we will use with our NCSS class.



.. code-block:: python

    ncss = NCSS(best_ds.access_urls['NetcdfSubset'])







We can then use the `ncss` object to create a new query object, which
facilitates asking for data from the server.



.. code-block:: python

    query = ncss.query()







We construct a query asking for data corresponding to latitude 40N and longitude 105W,
for the current time. We also ask for NetCDF version 4 data, for the variables
'Temperature_isobaric' and 'Relative_humidity_isobaric'. This request will return all
vertical levels for a single point and single time. Note the string representation of
the query is a properly encoded query string.



.. code-block:: python

    query.lonlat_point(-105, 40).time(datetime.utcnow())
    query.accept('netcdf4')
    query.variables('Temperature_isobaric', 'Relative_humidity_isobaric')







We now request data from the server using this query. The `NCSS` class handles parsing
this NetCDF data (using the `netCDF4` module). If we print out the variable names,
we see our requested variables, as well as a few others (more metadata information)



.. code-block:: python

    data = ncss.get_data(query)
    list(data.variables.keys())







We'll pull out the variables we want to use, as well as the pressure values. To get the
name of the correct variable for pressure (which matches the levels for temperature and
relative humidity, we look at the `coordinates` attribute. The last of the variables
listed in `coordinates` is the pressure dimension.



.. code-block:: python

    temp = data.variables['Temperature_isobaric']
    relh = data.variables['Relative_humidity_isobaric']
    press_name = relh.coordinates.split()[-1]
    press = data.variables[press_name]
    press_vals = press[:].squeeze()







Now we can plot these up using matplotlib.



.. code-block:: python

    fig, ax = plt.subplots(1, 1, figsize=(9, 8))
    ax.plot(temp[:].squeeze(), press_vals, 'r', linewidth=2)
    ax.set_xlabel('{} ({})'.format(temp.standard_name, temp.units))
    ax.set_ylabel('{} ({})'.format(press.standard_name, press.units))

    # Create second plot with shared y-axis
    ax2 = plt.twiny(ax)
    ax2.plot(relh[:].squeeze(), press_vals, 'g', linewidth=2)
    ax2.set_xlabel('{} ({})'.format(relh.standard_name, relh.units))
    ax.set_ylim(press_vals.max(), press_vals.min())
    ax.grid(True)



.. image:: /examples/ncss/images/sphx_glr_NCSS_Example_001.png
    :align: center




**Total running time of the script:** ( 0 minutes  6.121 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: NCSS_Example.py <NCSS_Example.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: NCSS_Example.ipynb <NCSS_Example.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <http://sphinx-gallery.readthedocs.io>`_
